# socialverse

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
README_VER/: README_CN.md
benchmarks/: README.md  _harness.py  run_benchmarks.py
docs/: CONTRACT_CARDS.md  Installation.md  LANDSCAPE.md  README-full.md  Release_notes.md  conf.py  index.md  requirements.txt
docs_zh/: Installation.md  Release_notes.md  conf.py  index.md
notebooks/: 01_registry_and_studystate.ipynb  01_registry_and_studystate.py  02_causal_did.ipynb  02_causal_did.py  03_complex_survey.ipynb  03_complex_survey.py  04_econometrics_replication.ipynb  04_econometrics_replication.py  05_qualitative_coding.ipynb  05_qualitative_coding.py  06_text_philology.ipynb  06_text_philology.py  07_theory_lens_network.ipynb  07_theory_lens_network.py  08_governance_gates.ipynb  08_governance_gates.py  09_literature_citation.ipynb  09_literature_citation.py  10_full_study_evidence_chain.ipynb  10_full_study_evidence_chain.py  11_quasi_experiment.ipynb  11_quasi_experiment.py  12_psychometrics.ipynb  12_psychometrics.py  13_multilevel_survival.ipynb  13_multilevel_survival.py  14_spatial_analysis.ipynb  14_spatial_analysis.py  15_qca_demography.ipynb  15_qca_demography.py  16_networks_stylometry.ipynb  16_networks_stylometry.py  17_regression_iv_matching_mediation.ipynb  17_regression_iv_matching_mediation.py  18_reproduction_rossi_cox.ipynb  18_reproduction_rossi_cox.py  19_reproduction_jpsp2023_mediation.ipynb  19_reproduction_jpsp2023_mediation.py  20_reproduction_hh2015_staggered_did.ipynb  20_reproduction_hh2015_staggered_did.py  (+22 more)
notebooks_en/: 01_registry_and_studystate.ipynb  02_causal_did.ipynb  03_complex_survey.ipynb  04_econometrics_replication.ipynb  05_qualitative_coding.ipynb  06_text_philology.ipynb  07_theory_lens_network.ipynb  08_governance_gates.ipynb  09_literature_citation.ipynb  10_full_study_evidence_chain.ipynb  11_quasi_experiment.ipynb  12_psychometrics.ipynb  13_multilevel_survival.ipynb  14_spatial_analysis.ipynb  15_qca_demography.ipynb  16_networks_stylometry.ipynb  17_regression_iv_matching_mediation.ipynb  18_reproduction_rossi_cox.ipynb  19_reproduction_jpsp2023_mediation.ipynb  20_reproduction_hh2015_staggered_did.ipynb  21_reproduction_401k_dml_cate.ipynb  22_meta_analysis_basics.ipynb  23_multilevel_and_robust_meta.ipynb  24_meta_regression_and_moderators.ipynb  25_publication_bias_and_sensitivity.ipynb  26_network_meta_analysis.ipynb  27_specialized_designs.ipynb  28_systematic_review_governance.ipynb  29_reproduction_ecr_multilevel_prevalence.ipynb
socialverse/: __init__.py  _cli.py  _compat_aliases.py  _registry.py  _slots.py  _state.py  _style.py  utils.py
(+106 files in other folders)
