[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socialverse"
version = "0.6.0"
description = "A structured, dependency-annotated function registry for the social sciences and humanities — the omicverse registry mechanism, ported off AnnData onto a light StudyState vocabulary."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "OmicOS / socialverse contributors" }]
keywords = ["social-science", "computational-social-science", "digital-humanities",
            "function-registry", "reproducibility", "agent", "causal-inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]

# Hard deps are deliberately minimal — the whole point is a light registry, not a
# heavy monolith. Everything domain-specific is federated and lazy-imported.
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
]

[project.urls]
Homepage = "https://github.com/omicverse/socialverse"
Repository = "https://github.com/omicverse/socialverse"
Documentation = "https://github.com/omicverse/socialverse/tree/main/notebooks"
Issues = "https://github.com/omicverse/socialverse/issues"

[project.optional-dependencies]
# federated analysis backends — installed only for the chains you use (lazy-imported)
stats = ["statsmodels>=0.13", "scipy>=1.9", "scikit-learn>=1.0"]
causal = ["linearmodels>=4.27", "pyfixest>=0.18", "scikit-learn>=1.0"]
survey = ["samplics>=0.3", "pingouin>=0.5", "factor_analyzer>=0.4"]
text = ["spacy>=3.4", "lxml>=4.9"]
net = ["networkx>=2.8"]
figure = ["matplotlib>=3.5", "seaborn>=0.12"]
lit = ["requests>=2.28", "bibtexparser>=1.4"]
docx = ["python-docx>=0.8"]
# convenience: everything needed to run the built-in demos / test-suite
full = [
    "statsmodels>=0.13", "scipy>=1.9", "scikit-learn>=1.0", "networkx>=2.8", "matplotlib>=3.5",
]
dev = ["pytest>=7.0", "statsmodels>=0.13", "scipy>=1.9", "scikit-learn>=1.0", "networkx>=2.8", "matplotlib>=3.5"]

[project.scripts]
socialverse = "socialverse._cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["socialverse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
